@@ -11,7 +11,7 @@
         <script src="/static/jquery/jquery-1.8.13.min.js">
         </script>
         <script src="/static/underscore/underscore-min.js"></script>
-        <script type="text/javascript" src="js/main_category.js">
+        <script type="text/javascript" src="js/main_category.js?v=1.0">
         </script>
         <script type="text/javascript" src="js/get_category.js">
         </script>
