@@ -53,7 +53,7 @@ class SaleSupplierAdmin(MyAdmin):
     list_display = ('id', 'supplier_code', 'supplier_name_link', 'charge_link',
                     'total_select_num', 'total_sale_amount', 'total_refund_amount', 'avg_post_days',
                     'category_select', 'progress', 'last_select_time', 'last_schedule_time',
-                    'supplier_type_choice', 'supplier_zone_choice', 'memo_well')
+                    'supplier_type_choice', 'supplier_zone_choice', 'ware_by', 'memo_well')
     list_display_links = ('id',)
     # list_editable = ('update_time','task_type' ,'is_success','status')
 
@@ -172,7 +172,7 @@ class SaleSupplierAdmin(MyAdmin):
                                , ('email', 'zip_code')
                                , ('address', 'progress', 'status')
                                , ('account_bank', 'account_no')
-                               , ('supplier_type', 'supplier_zone')
+                               , ('supplier_type', 'supplier_zone', 'ware_by')
                                , ('memo',)
                                )
                  }),
