@@ -115,7 +115,18 @@
                 {% endfor %}
             </select>
         </div>
-
+    </div>
+    <div class="row">
+        <div class="col-md-2">
+            <label class="form-control">仓库</label>
+        </div>
+        <div class="col-md-4">
+            <select class="form-control" id="ware_by">
+                {% for w in ware_bys %}
+                <option value="{{w.value}}">{{ w.text }}</option>
+                {% endfor %}
+            </select>
+        </div>
     </div>
     <div class="row">
         <div class="col-md-2">
